tests/invalid_typecheck/test_tc_array_size_zero.aphi
int[0] A;

procedure main {
    A[0] = 1;
}
